--- a/package.json
+++ b/package.json
@@ -41,5 +41,20 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vladosxxx/contacts-app.git"
+  },
+  "keywords": [
+    "contacts"
+  ],
+  "author": "Vlad Manoilo <vladosxxx@gmail.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vladosxxx/contacts-app/issues"
+  },
+  "homepage": "https://github.com/vladosxxx/contacts-app#readme"
 }
